@@ -4,6 +4,8 @@ The Nsubjettiness FastJet contrib was written and is maintained and developed by
    Ken Van Tilburg <kenvt@stanford.edu>
    Christopher K. Vermilion <christopher.vermilion@gmail.com>
 
+with additional code development by TJ Wilkason <tjwilk@mit.edu>.
+
 Questions and comments should be directed to:  jthaler@jthaler.net.
 
 For physics details, see:
