@@ -51,28 +51,75 @@ namespace contrib {
 class Nsubjettiness : public FunctionOfPseudoJet<Double32_t> {
 public:
 
-   Nsubjettiness(int N, Njettiness::AxesMode mode, double beta, double R0, double Rcutoff=std::numeric_limits<double>::max());
+   Nsubjettiness(int N, Njettiness::AxesMode mode, double beta, double R0, double Rcutoff=std::numeric_limits<double>::max(), bool normalized = true);
    
    /// returns tau_N, measured on the constituents of this jet
    Double32_t result(const PseudoJet& jet) const;
+   // returns the normalization factor calculated in Njettiness --TJW
+   Double32_t d0(const PseudoJet& jet) const;
+   
+   //ADDED BY TJW to set axes for manual use 
+   void setAxes(std::vector<fastjet::PseudoJet> myAxes) {
+      // TODO:  Have this test that manual axes are being used
+   	_njettinessFinder.setAxes(myAxes);
+   }
 
 private:
 
+   bool _normalized;
    int _N;
    mutable Njettiness _njettinessFinder; // should muck with this so result can be const without this mutable
 
 };
 
-inline Nsubjettiness::Nsubjettiness(int N, Njettiness::AxesMode mode, double beta, double R0, double Rcutoff)
-  : _N(N), _njettinessFinder(mode, NsubParameters(beta, R0, Rcutoff))
-{}
+inline Nsubjettiness::Nsubjettiness(int N, Njettiness::AxesMode mode, double beta, double R0, double Rcutoff, bool normalized)
+  : _njettinessFinder(mode, NsubParameters(beta, R0, Rcutoff)), _N(N), _normalized(normalized) {}
 
+inline Double32_t Nsubjettiness::d0(const PseudoJet& jet) const {
+   std::vector<fastjet::PseudoJet> particles = jet.constituents();
+   return _njettinessFinder.getTau_denominator(particles); //calls on Njettiness getTau_denominator, which is calculated in MeasureFunctor
+   //Double32_t tau = 0.0;
+   //for (int i = 0; i < particles.size(); i++) {
+      //tau += particles[i].perp() * std::pow(_R0, _beta);
+   //}
+   //return tau;
+}
+
+//result will allow user to choose whether they want numerator or normalized version --TJW
 inline Double32_t Nsubjettiness::result(const PseudoJet& jet) const
 {
    std::vector<fastjet::PseudoJet> particles = jet.constituents();
-   return _njettinessFinder.getTau(_N, particles);
-}
+   if (_normalized) return _njettinessFinder.getTau(_N, particles); 
+   else return _njettinessFinder.getTau_numerator(_N, particles);
+} 
 
+//Class NsubjettinessRatios
+//Used to Calculate tau_N/tau_M based off results from class Nsubjettiness
+//Requires two integers in constructor (N, M)
+//class added by TJW
+class NsubjettinessRatio : public FunctionOfPseudoJet<Double32_t> {
+public:
+   NsubjettinessRatio(int N, 
+      int M, 
+      Njettiness::AxesMode mode, 
+      double beta, 
+      double Rcutoff=std::numeric_limits<double>::max())
+   : _nsub_numerator(N, mode, beta, 1.0, Rcutoff), _nsub_denominator(M, mode, beta, 1.0, Rcutoff) {};
+   // TODO:  Set constant for R0 = 1.0 so that we don't have magic numbers
+
+   //returns tau_N/tau_M based off the input jet, uses result function from Nsubjettiness 
+   double result(const PseudoJet& jet) const;
+
+private: 
+   Nsubjettiness _nsub_numerator;
+   Nsubjettiness _nsub_denominator;
+};
+
+inline double NsubjettinessRatio::result(const PseudoJet& jet) const {
+   double numerator = _nsub_numerator.result(jet);
+   double denominator = _nsub_denominator.result(jet);
+   return numerator/denominator;
+}
 
 } // namespace contrib
 
